--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -12,86 +12,49 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="150dp"
+        android:background="@android:color/black"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/backdrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
+            android:id="@+id/poster"
+            android:layout_width="@dimen/adapter_poster_width"
+            android:layout_height="@dimen/adapter_poster_height"
             android:background="@drawable/w185"
             android:contentDescription="@string/poster_description"
+            android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true">
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:layout_below="@id/poster"
+            tools:text="Title for movie"/>
 
-            <ImageView
-                android:id="@+id/poster"
-                android:layout_width="@dimen/adapter_poster_width"
-                android:layout_height="@dimen/adapter_poster_height"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/w185"
-                android:layout_gravity="center_horizontal"
-                android:contentDescription="@string/poster_description"
-                android:scaleType="centerCrop"/>
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/rating_text_size"
+            android:textStyle="normal"
+            android:layout_below="@id/title"
+            tools:text="November 2015"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/black_with_alpha"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/title_adapter_margin"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    tools:text="Title for movie"/>
-
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/date_left_margin"
-                    android:layout_marginStart="@dimen/date_right_margin"
-                    android:textColor="@color/secondary_text"
-                    android:textSize="@dimen/date_size"
-                    android:textStyle="normal"
-                    tools:text="November 2015"/>
-
-                <TextView
-                    android:id="@+id/rating_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/rating_margin"
-                    android:textColor="@color/secondary_text"
-                    android:textSize="@dimen/rating_text_size"
-                    android:textStyle="normal"
-                    tools:text="Rating 7.0/10"/>
-
-                <RatingBar
-                    android:id="@+id/rating"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:numStars="10"
-                    android:stepSize="0.1"
-                    android:visibility="gone"
-                    tools:visibility="visible"
-                    tools:rating="8"/>
-
-            </LinearLayout>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/rating_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/rating_text_size"
+            android:textStyle="normal"
+            android:layout_below="@id/date"
+            tools:text="Rating 7.0/10"/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
