--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,250 +4,161 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
-
-    <ImageView
-        android:id="@+id/backdrop"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/backdrop_description"
-        android:scaleType="centerCrop"/>
+    android:layout_height="match_parent">
 
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/detail_side_margin"
-            android:layout_marginRight="@dimen/detail_side_margin"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/detail_top_margin"/>
-
-            <LinearLayout
-                android:id="@+id/ll_root"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/icons"
-                android:orientation="vertical">
+                android:layout_marginLeft="@dimen/detail_side_margin"
+                android:layout_marginRight="@dimen/detail_side_margin"
+                android:background="@color/icons">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/poster"
+                    android:layout_width="@dimen/w342_width"
+                    android:layout_height="@dimen/w342_height"
+                    android:layout_margin="@dimen/border_margin"
+                    android:contentDescription="@string/poster_description"
+                    android:scaleType="centerCrop"
+                    tools:src="@drawable/w342"/>
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:textSize="@dimen/title_size"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="@dimen/right_margin"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:layout_marginRight="@dimen/right_margin"
+                    android:layout_marginStart="@dimen/left_margin"
+                    android:layout_marginTop="@dimen/top_margin"
+                    android:layout_toRightOf="@id/poster"
+                    android:layout_toEndOf="@id/poster"
+                    tools:text="Title"/>
 
-                    <RelativeLayout
-                        android:id="@+id/poster_container"
-                        android:layout_width="@dimen/w342_width"
-                        android:layout_height="@dimen/w342_height"
-                        android:layout_margin="@dimen/border_margin">
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/space_text_margin"
+                    android:layout_marginEnd="@dimen/right_margin"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:layout_marginRight="@dimen/right_margin"
+                    android:layout_marginStart="@dimen/left_margin"
+                    android:layout_marginTop="@dimen/top_margin"
+                    android:layout_toRightOf="@id/poster"
+                    android:layout_toEndOf="@id/poster"
+                    android:layout_below="@+id/title"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/second_text_size"
+                    android:textStyle="normal"
+                    tools:text="November 2015"/>
 
-                        <ImageView
-                            android:id="@+id/no_poster"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:contentDescription="@string/no_poster"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/w342"/>
+                <TextView
+                    android:id="@+id/genres"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/right_margin"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:layout_marginRight="@dimen/right_margin"
+                    android:layout_marginStart="@dimen/left_margin"
+                    android:layout_marginTop="@dimen/top_margin"
+                    android:layout_toRightOf="@id/poster"
+                    android:layout_toEndOf="@id/poster"
+                    android:layout_below="@+id/date"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/second_text_size"
+                    tools:text="Action|Comedy"/>
 
-                        <ImageView
-                            android:id="@+id/poster"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:contentDescription="@string/poster_description"
-                            android:scaleType="centerCrop"/>
+                <TextView
+                    android:id="@+id/runtime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/right_margin"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:layout_marginRight="@dimen/right_margin"
+                    android:layout_marginStart="@dimen/left_margin"
+                    android:layout_marginTop="@dimen/top_margin"
+                    android:layout_toRightOf="@id/poster"
+                    android:layout_toEndOf="@id/poster"
+                    android:layout_below="@+id/genres"
+                    android:textSize="@dimen/second_text_size"
+                    tools:text="90 min"/>
 
-                        <Button
-                            android:id="@+id/trailer_button"
-                            android:layout_width="@dimen/trailer_button_width"
-                            android:layout_height="@dimen/trailer_button_height"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
-                            android:background="@drawable/background_play_button"
-                            android:visibility="gone"
-                            tools:visibility="visible"/>
-                    </RelativeLayout>
+                <TextView
+                    android:id="@+id/tagline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/right_margin"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:layout_marginRight="@dimen/right_margin"
+                    android:layout_marginStart="@dimen/left_margin"
+                    android:layout_marginTop="@dimen/top_margin"
+                    android:layout_toRightOf="@id/poster"
+                    android:layout_toEndOf="@id/poster"
+                    android:layout_below="@+id/runtime"
+                    android:textSize="@dimen/second_text_size"
+                    tools:text="What is lonely day"/>
 
-                    <LinearLayout
-                        android:id="@+id/info_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/right_margin"
-                        android:layout_marginLeft="@dimen/left_margin"
-                        android:layout_marginRight="@dimen/right_margin"
-                        android:layout_marginStart="@dimen/left_margin"
-                        android:layout_marginTop="@dimen/top_margin"
-                        android:orientation="vertical">
+                <TextView
+                    android:id="@+id/rating_pic_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/right_margin"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:layout_marginRight="@dimen/right_margin"
+                    android:layout_marginStart="@dimen/left_margin"
+                    android:layout_marginTop="@dimen/top_margin"
+                    android:layout_toRightOf="@id/poster"
+                    android:layout_toEndOf="@id/poster"
+                    android:layout_below="@+id/tagline"
+                    tools:text="Rating 7.0/10"/>
 
-                        <TextView
-                            android:id="@+id/title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="@dimen/title_size"
-                            android:textStyle="bold"
-                            tools:text="Title"/>
-
-                        <TextView
-                            android:id="@+id/date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/space_text_margin"
-                            android:layout_marginTop="@dimen/space_text_margin"
-                            android:textColor="@color/secondary_text"
-                            android:textSize="@dimen/second_text_size"
-                            android:textStyle="normal"
-                            tools:text="November 2015"/>
-
-                        <TextView
-                            android:id="@+id/genres"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/space_text_margin"
-                            android:layout_marginTop="@dimen/space_text_margin"
-                            android:textColor="@color/secondary_text"
-                            android:textSize="@dimen/second_text_size"
-                            tools:text="Action|Comedy"/>
-
-                        <TextView
-                            android:id="@+id/runtime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/space_text_margin"
-                            android:layout_marginTop="@dimen/space_text_margin"
-                            android:textSize="@dimen/second_text_size"
-                            tools:text="90 min"/>
-
-                        <TextView
-                            android:id="@+id/tagline"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/space_text_margin"
-                            android:layout_marginTop="@dimen/space_text_margin"
-                            android:lineSpacingMultiplier="1.0"
-                            android:textSize="@dimen/second_text_size"
-                            tools:text="What is lonely day"/>
-
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-
-                            <RelativeLayout
-                                android:id="@+id/rating_view"
-                                android:layout_width="@dimen/size_big_star"
-                                android:layout_height="@dimen/size_big_star">
-
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:contentDescription="@string/no_poster"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/star_big"/>
-
-                                <TextView
-                                    android:id="@+id/rating_pic"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_centerInParent="true"
-                                    tools:text="7.0"/>
-
-                            </RelativeLayout>
-
-                            <TextView
-                                android:id="@+id/rating_pic_text"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:layout_marginLeft="@dimen/left_star_margin"
-                                android:layout_marginStart="@dimen/left_star_margin"
-                                android:layout_toEndOf="@id/rating_view"
-                                android:layout_toRightOf="@id/rating_view"
-                                tools:text="Rating 7.0/10"/>
-
-                        </RelativeLayout>
-
-                        <Button
-                            android:id="@+id/post_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/post"
-                            android:visibility="gone"/>
-
-
-                    </LinearLayout>
-                </LinearLayout>
+                <Button
+                    android:id="@+id/trailer_button"
+                    android:layout_width="@dimen/trailer_button_width"
+                    android:layout_height="@dimen/trailer_button_height"
+                    android:background="@drawable/background_play_button"
+                    android:layout_marginEnd="@dimen/right_margin"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:layout_marginRight="@dimen/right_margin"
+                    android:layout_marginStart="@dimen/left_margin"
+                    android:layout_marginTop="@dimen/top_margin"
+                    android:layout_toRightOf="@id/poster"
+                    android:layout_toEndOf="@id/poster"
+                    android:layout_below="@+id/rating_pic_text"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
 
                 <TextView
                     android:id="@+id/overview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/border_margin"
-                    android:lineSpacingMultiplier="1.2"
                     android:textSize="@dimen/second_text_size"
+                    android:layout_below="@id/poster"
                     tools:text="Overview may be long"/>
 
                 <View
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_below="@id/overview"
                     android:background="@color/divider"/>
 
-                <LinearLayout
+                <FrameLayout
+                    android:id="@+id/cast_container"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/person_adapter_height"
-                    android:layout_margin="@dimen/border_margin"
-                    android:visibility="gone"
-                    android:orientation="vertical">
+                    android:layout_below="@id/divider"
+                    android:layout_height="200dp"/>
+            </RelativeLayout>
 
-                    <TextView
-                        android:id="@+id/tv_cast_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/label_detail_cast"
-                        android:textSize="@dimen/title_size"
-                        android:textStyle="bold"/>
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_cast_list"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        tools:scrollbars="horizontal"
-                        tools:listitem="@layout/adapter_crews"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/person_adapter_height"
-                    android:layout_marginEnd="@dimen/border_margin"
-                    android:layout_marginLeft="@dimen/border_margin"
-                    android:layout_marginRight="@dimen/border_margin"
-                    android:layout_marginStart="@dimen/border_margin"
-                    android:visibility="gone"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tv_crew_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/label_detail_crew"
-                        android:textSize="@dimen/title_size"
-                        android:textStyle="bold"/>
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_crew_list"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        tools:scrollbars="horizontal"
-                        tools:listitem="@layout/adapter_crews"/>
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
     </ScrollView>
 
     <ProgressBar
