--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -12,8 +12,8 @@
     tools:showIn="@layout/fragment_recycler_main">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="353dp"
+        android:layout_height="235dp"
         android:orientation="vertical">
 
         <ImageView
