--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,9 @@
             android:id="@+id/nav_now_playing"
             android:title="Now playing"/>
         <item
+            android:id="@+id/nav_popular"
+            android:title="Popular"/>
+        <item
             android:id="@+id/nav_maps"
             android:title="Maps"/>
     </group>
